Fix issues encountered when running unit tests on Windows
Fix XML file path issues when running tests on Windows
Fix unfinished mocking error when running all tests at once
(Problem did not occur when running test method singurlarly)